--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Barber X - Barber Shop Template</title>
+        <title>Barber X </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta content="Barber Template" name="keywords">
+        <meta content="Barber Template" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -44,11 +44,11 @@
                     <div class="col-md-6">
                         <div class="top-bar-right">
                             <div class="social">
-                                 <a href="https://freewebsitecode.com/"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://facebook.com/freewebsitecode"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="https://freewebsitecode.com/"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="https://freewebsitecode.com/"><i class="fab fa-instagram"></i></a>
-                                    <a href="https://www.youtube.com/channel/UC9HlQRmKgG3jeVD_fBxj1Pw/videos"><i class="fab fa-youtube"></i></a>
+                                 <a href=""><i class="fab fa-twitter"></i></a>
+                                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href=""><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
@@ -94,11 +94,11 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
                         <div class="hero-text">
-                            <h1>HTML5 Template for Salon Website</h1>
+                            <h1>Salon Website</h1>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasell nec pretum mi. Curabi ornare velit non. Aliqua metus tortor auctor quis sem.
                             </p>
-                            <a class="btn" href="https://freewebsitecode.com/category/freecode/">Download Now</a>
+                            <!-- <a class="btn" href="">Download Now</a> -->
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
@@ -625,11 +625,11 @@
                                     <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
                                     <p><i class="fa fa-envelope"></i>info@example.com</p>
                                     <div class="footer-social">
-                                       <a href="https://freewebsitecode.com/"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://facebook.com/freewebsitecode"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="https://freewebsitecode.com/"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="https://freewebsitecode.com/"><i class="fab fa-instagram"></i></a>
-                                    <a href="https://www.youtube.com/channel/UC9HlQRmKgG3jeVD_fBxj1Pw/videos"><i class="fab fa-youtube"></i></a>
+                                       <a href=""><i class="fab fa-twitter"></i></a>
+                                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href=""><i class="fab fa-youtube"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -662,10 +662,10 @@
             <div class="container copyright">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>&copy; <a href="https://freewebsitecode.com">Your Site Name</a>, All Right Reserved.</p>
+                        <p>&copy; <a href="">Your Site Name</a>, All Right Reserved.</p>
                     </div>
                     <div class="col-md-6">
-                        <p>Designed By <a href="https://freewebsitecode.com">Free Website Code</a></p>
+                        <p>Designed By <a href="">Mduduzi Ndlovu</a></p>
                     </div>
                 </div>
             </div>
