--- a/team.html
+++ b/team.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Barber X - Barber Shop Template</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta content="Barber Template" name="keywords">
+        <meta content="Barber Template" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -44,11 +44,11 @@
                     <div class="col-md-6">
                         <div class="top-bar-right">
                             <div class="social">
-                                 <a href="https://freewebsitecode.com/"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://facebook.com/freewebsitecode"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="https://freewebsitecode.com/"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="https://freewebsitecode.com/"><i class="fab fa-instagram"></i></a>
-                                    <a href="https://www.youtube.com/channel/UC9HlQRmKgG3jeVD_fBxj1Pw/videos"><i class="fab fa-youtube"></i></a>
+                                 <a href=""><i class="fab fa-twitter"></i></a>
+                                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href=""><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
@@ -176,11 +176,11 @@
                                     <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
                                     <p><i class="fa fa-envelope"></i>info@example.com</p>
                                     <div class="footer-social">
-                                       <a href="https://freewebsitecode.com/"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://facebook.com/freewebsitecode"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="https://freewebsitecode.com/"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="https://freewebsitecode.com/"><i class="fab fa-instagram"></i></a>
-                                    <a href="https://www.youtube.com/channel/UC9HlQRmKgG3jeVD_fBxj1Pw/videos"><i class="fab fa-youtube"></i></a>
+                                       <a href=""><i class="fab fa-twitter"></i></a>
+                                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href=""><i class="fab fa-youtube"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -213,10 +213,10 @@
             <div class="container copyright">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>&copy; <a href="https://freewebsitecode.com">Your Site Name</a>, All Right Reserved.</p>
+                        <p>&copy; <a href="">Your Site Name</a>, All Right Reserved.</p>
                     </div>
                     <div class="col-md-6">
-                        <p>Designed By <a href="https://freewebsitecode.com">Free Website Code</a></p>
+                        <p>Designed By <a href="">Mduduzi Ndlovu</a></p>
                     </div>
                 </div>
             </div>
